# esp32-remote-access

./: .dockerignore  .gitignore  README.md  README.rst  data_type_definitions.md  entity_relations.md  ios_preparation.md  sequence.md
ansible/: inventory.yml  production_update_playbook.yml  staging_update_playbook.yml  test_production_update_playbook.yml
backend/: .env.example  Cargo.toml
backend/src/: api_docs.rs  branding.rs  error.rs  hasher.rs  key_extractor.rs  lib.rs  main.rs  monitoring.rs  rate_limit.rs  udp_server.rs  utils.rs  ws_udp_bridge.rs
backend/src/middleware/: jwt.rs  mod.rs
backend/src/model/: login.rs  mod.rs  register.rs
backend/src/models/: filtered_user.rs  lang.rs  login.rs  mod.rs  register.rs  response_auth_token.rs  token_claims.rs  uuid.rs
backend/src/routes/: check_expiration.rs  management.rs  mod.rs  selfdestruct.rs  send_chargelog_to_user.rs  state.rs  static_files.rs  webinterface.rs
backend/src/routes/auth/: generate_salt.rs  get_login_salt.rs  jwt_refresh.rs  login.rs  logout.rs  mod.rs  recovery.rs  register.rs  resend_verification.rs  start_recovery.rs  verify.rs
backend/src/routes/charger/: add.rs  add_with_token.rs  allow_user.rs  get_chargers.rs  get_devices.rs  get_key.rs  info.rs  mod.rs  remove.rs  update_note.rs
backend/src/routes/grouping/: add_device_to_grouping.rs  create_grouping.rs  delete_grouping.rs  edit_grouping.rs  get_groupings.rs  mod.rs  remove_device_from_grouping.rs  test_helpers.rs
backend/src/routes/user/: create_authorization_token.rs  delete.rs  delete_authorization_token.rs  get_authorization_tokens.rs  get_login_salt.rs  get_secret.rs  logout.rs  me.rs  mod.rs  update_password.rs  update_user.rs
backend/src/udp_server/: device.rs  management.rs  mod.rs  multiplex.rs  packet.rs  pcap_logger.rs  socket.rs
backend/templates/: chargelog_de.html  chargelog_en.html  email_change_notification_de.html  email_change_notification_en.html  email_verification_de.html  email_verification_en.html  monitoring.html  register.html  register_en.html  start_recovery.html  start_recovery_de.html  start_recovery_en.html
boringtun-test/: Cargo.toml  Dioxus.toml  webdriver.json
boringtun-test/src/: handshake.rs  main.rs  stream.rs  utils.rs  wg_device.rs
cli/: .gitignore  package-lock.json  package.json  tsconfig.json
db_connector/: Cargo.toml
db_connector/migrations/2024-02-09-085516_users/: up.sql
db_connector/migrations/2024-02-09-085809_chargers/: down.sql  up.sql
db_connector/migrations/2024-02-09-085912_wg_keys/: down.sql  up.sql
db_connector/migrations/2024-02-09-090027_allowed_users/: down.sql  up.sql
db_connector/migrations/2024-02-15-082051_create_verification/: down.sql  up.sql
db_connector/migrations/2024-04-22-080922_create_refresh_tokens/: down.sql  up.sql
db_connector/migrations/2024-04-22-080922_create_sessions/: up.sql
db_connector/migrations/2024-05-07-080457_create_recovery_tokens/: down.sql  up.sql
db_connector/migrations/2024-08-19-073608_allowed_users_add_valid_flag/: down.sql  up.sql
db_connector/migrations/2024-08-20-133644_chargers_drop_ip_column/: down.sql  up.sql
db_connector/migrations/2024-08-21-085738_chargers_change_name_type/: down.sql  up.sql
db_connector/migrations/2024-09-25-125052_allowed_users_add_name/: down.sql  up.sql
db_connector/migrations/2024-10-01-080045_chargers_add_uuid/: down.sql  up.sql
db_connector/migrations/2024-11-21-115437_cascade_delete_wg_keys/: down.sql  up.sql
db_connector/migrations/2024-12-10-111748_verification_add_expiration/: down.sql  up.sql
db_connector/migrations/2024-12-12-131607_allowed_users_add_user_id_charger_id_constraint/: down.sql  up.sql
db_connector/migrations/2024-12-18-092514_users_add_delivery_email/: down.sql  up.sql
db_connector/migrations/2025-01-03-085618_add_authorization_token/: down.sql  up.sql
db_connector/migrations/2025-01-22-133805_users_add_old_email/: down.sql  up.sql
db_connector/migrations/2025-05-28-080713_auth_tokens_add_name_and_timestamps/: down.sql  up.sql
db_connector/migrations/2025-06-02-125244_chargers_add_las_state_change/: down.sql  up.sql
db_connector/migrations/2025-09-11-120000_chargers_add_device_type/: down.sql  up.sql
db_connector/migrations/2025-10-20-131714_wg_keys_drop_in_use/: down.sql  up.sql
db_connector/migrations/2025-10-23-061902_create_device_groupings/: down.sql  up.sql
db_connector/migrations/2025-10-23-065308_create_device_grouping_members/: down.sql  up.sql
db_connector/migrations/2025-11-11-084407_chargers_add_mtu/: down.sql  up.sql
db_connector/migrations/2026-02-23-133509_add_last_charge_log_upload_hash/: down.sql  up.sql
db_connector/migrations/2026-06-18-101531_add_persistent_tag_to_groupings/: down.sql  up.sql
db_connector/src/: lib.rs  schema.rs
db_connector/src/model/: chargers.rs  users.rs
db_connector/src/models/: allowed_users.rs  authorization_tokens.rs  chargers.rs  device_grouping_members.rs  device_groupings.rs  mod.rs  recovery_tokens.rs  refresh_tokens.rs  sessions.rs  users.rs  verification.rs  wg_keys.rs
docker/: .env.example  .gitignore  docker-compose-dev.yml  docker-compose-staging.yml  docker-compose.yml
frontend/: .env.local.example  .eslintignore  .eslintrc.json  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  post-playwright.config.ts  pre-playwright.config.ts  tsconfig.json  vite-plugin-version.ts  vite.config.ts  vitest.config.ts
remote-access-page/: index.html  package-lock.json  package.json  patch.js  patch_worker.py  tsconfig.json  vite.config.ts
scripts/: backup_database.sh
tun/: Cargo.toml  build.rs
tun/src/: ffi.c  http.rs  main.rs
warp_emu/: Cargo.toml
warp_emu/src/: main.rs
warp_emulator/: Cargo.toml
warp_emulator/src/: crypto.rs  http.rs  main.rs
wg-webclient/: Cargo.toml  LICENSE_MIT
wg-webclient/.cargo/: config.toml
wg-webclient/src/: handshake.rs  hyper_stream.rs  interface.rs  interval_handle.rs  lib.rs  stream.rs  utils.rs  websocket.rs  wg_client.rs  wg_device.rs
ws-udp-bridge/: Cargo.toml
ws-udp-bridge/src/: main.rs
(+166 files in other folders)
