[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "api_docs"
path = "src/api_docs.rs"

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"

db_connector = { path = "../db_connector" }
serde = { version = "1.0.196", features = ["derive"] }
argon2 = "0.5.3"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "uuid", "network-address"] }
uuid = { version = "1.7.0", features = ["v4"] }
actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive"] }
chrono = "0.4.33"
actix-cors = "0.7.0"
jsonwebtoken = "9.2.0"
futures-util = "0.3.30"
lettre = { version = "0.11.4", features = ["native-tls"] }
derive_more = "0.99.17"
simplelog = "0.12.1"
base64 = "0.21.7"
ipnetwork = "0.20.0"
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
actix-web-actors = "4.3.0"
actix = "0.13.3"
log = "0.4.20"
boringtun = "0.6.0"
rand_core = "0.6.4"

[dev-dependencies]
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
