[package]
name = "db_connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
diesel = { version = "2.2.9", features = ["postgres", "r2d2", "uuid", "network-address", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"

# need diesel rs to update this depency first
ipnetwork = "0.21.1"
log = "0.4.27"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
