[package]
name = "tun"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1.2.18"

[dependencies]
anyhow = "1.0.97"
argon2 = "0.5.3"
base64 = "0.22.1"
boringtun = "0.6.0"
clap = { version = "4.5.35", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["cli"] }
futures-util = "0.3.31"
ipnetwork = { version = "0.21.1", features = ["serde"] }
libc = "0.2.171"
libsodium-sys-stable = { version = "1.22.3", features = ["optimized", "minimal"] }
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["cookies"] }
reqwest-websocket = "0.4.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
tabled = "0.18.0"
tokio = { version = "1.44.2", features = ["full"] }
uuid = "1.16.0"
