[package]
name = "warp_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
smoltcp = "0.11.0"
backend = {path = "../backend"}
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
anyhow = "1.0.86"
libsodium-sys-stable = { version = "1.20.9", features = ["fetch-latest"] }
argon2 = { version = "0.5.3", features = ["alloc"] }
serde_json = "1.0.120"
simplelog = "0.12.2"
base64 = "0.22.1"
ipnetwork = "0.20.0"
bs58 = "0.5.1"
