[package]
name = "wg-webclient"
version = "0.1.0"
authors = ["Frederic Henrichs <frederic@tinkerforge.com>"]
edition = "2021"
description = "A wasm library to provide a fetch/ws api that is tunneled through Wireguard."
repository = "https://github.com/Tinkerforge/esp32-remote-access"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

boringtun = { git = "https://github.com/Tinkerforge/boringtun.git", rev = "0c9d751b51f201ed42863a1271fb2f04187211aa", default-features = false }
getrandom = { version = "0.3", features = ["wasm_js"] }
rand_core = { version = "0.9", features = ["os_rng"] }
anyhow = { version = "1.0.79", default-features = false}
js-sys = "0.3.66"
wasm-timer = "0.2.5"
http = "1.0.0"
tungstenite = "0.28"

# Instant::now from smoltcp, enabled by the std-feature must not be used since it will crash in wasm32
smoltcp = { version = "0.12.0", default-features = false, features = ["proto-ipv4", "medium-ip", "socket-tcp", "std"] }
web-sys = { version = "0.3.69", features = ["WebSocket", "Window", "FileReader", "Document", "Element", "HtmlElement", "Performance", "MessageEvent", "CustomEventInit", "CustomEvent", "Headers", "ResponseInit", "Response", "WorkerGlobalScope", "Request", "AddEventListenerOptions", "Crypto"] }


pcap-file = "2.0.0"
base64 = "0.22"
gloo-file = "0.3.0"
hyper = { version = "1.1.0", features = ["client", "http1"] }
wasm-bindgen-futures = "0.4.39"
http-body-util = "0.1.0"
futures = "0.3.30"
flate2 = "1.0.28"
md5 = "0.8.0"
urlencoding = "2.1.3"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.22"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
strip = true

# workaround for https://github.com/rustwasm/wasm-pack/issues/1501
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
