[package]
name = "ws-udp-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = "0.3.30"
log = "0.4.20"
rand = "0.8.5"
simplelog = "0.12.1"
tokio = { version = "1.35.1", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = "0.21.0"
